[gd_scene load_steps=37 format=3 uid="uid://cnva1t7elyuce"]

[ext_resource type="Script" uid="uid://biwrxmh77pnjx" path="res://Model/hud.gd" id="2_ugs5p"]
[ext_resource type="FontFile" uid="uid://cpy65047eb1jb" path="res://font/Minecraftia-Regular.ttf" id="3_o5r0d"]
[ext_resource type="Texture2D" uid="uid://kqwpf74iny3b" path="res://assets/load_screen/icon.png" id="3_vcgxy"]
[ext_resource type="Texture2D" uid="uid://cd2dc2vr6blus" path="res://assets/bar/health_bar_empty.png" id="6_nmx3l"]
[ext_resource type="Texture2D" uid="uid://e14rlujxv2r6" path="res://assets/bar/filled_bar.png" id="7_s7bk8"]
[ext_resource type="Script" uid="uid://blpgf8txxyl8p" path="res://Model/crop_bar.gd" id="8_fj0si"]
[ext_resource type="Texture2D" uid="uid://cgjqbebqtphh2" path="res://assets/bar/efficiency_bar_empty.png" id="9_1cvsb"]
[ext_resource type="Texture2D" uid="uid://cjxus45xwl0ka" path="res://assets/bar/happiness_bar_empty.png" id="10_0ig0g"]
[ext_resource type="Texture2D" uid="uid://dqr6pies270gc" path="res://assets/button/next_round_button/next_round.png" id="10_o4crf"]
[ext_resource type="Script" uid="uid://dfm8a1cu60p68" path="res://Model/button_action.gd" id="11_jtq4o"]
[ext_resource type="Texture2D" uid="uid://bdjdosauo7cn7" path="res://assets/button/next_round_button/next_button_click.png" id="11_n3rgs"]
[ext_resource type="Texture2D" uid="uid://b606r1q7nyyme" path="res://assets/button/next_round_button/next_button_hover.png" id="12_s65m4"]
[ext_resource type="Script" uid="uid://bqulw7dgngjad" path="res://Model/InventaireUI.gd" id="13_ew7f8"]
[ext_resource type="Texture2D" uid="uid://5shnpi0shen" path="res://assets/button/stats_button/stats_button.png" id="13_xp7qj"]
[ext_resource type="Texture2D" uid="uid://dvwspwokc7nel" path="res://assets/button/stats_button/stats_button_click.png" id="14_o4crf"]
[ext_resource type="PackedScene" uid="uid://r1h4u5yp1lk2" path="res://View/chart_stats.tscn" id="14_o7jfm"]
[ext_resource type="Script" uid="uid://0h5bj5sdmbnu" path="res://Model/info_panel.gd" id="14_xnmgy"]
[ext_resource type="Texture2D" uid="uid://bdsxeyinjifjk" path="res://assets/button/settings_button/settings_button.png" id="15_2wmmq"]
[ext_resource type="Texture2D" uid="uid://bowodu7cj4rx6" path="res://assets/button/settings_button/settings_button_click.png" id="15_6wuao"]
[ext_resource type="Texture2D" uid="uid://cr0b46d5w4tww" path="res://assets/button/stats_button/stats_button_hover.png" id="15_o4crf"]
[ext_resource type="Texture2D" uid="uid://b2wvwolc4xo5i" path="res://assets/button/settings_button/settings_button_hover.png" id="16_6wuao"]
[ext_resource type="Texture2D" uid="uid://b40w07owntxx8" path="res://assets/button/shop_button/shop_button.png" id="18_nlktb"]
[ext_resource type="Texture2D" uid="uid://b03onv7qx5kj2" path="res://assets/button/shop_button/shop_button_click.png" id="19_vpgw3"]
[ext_resource type="Texture2D" uid="uid://j1k2pn3l2oi4" path="res://assets/button/shop_button/shop_button_hover.png" id="20_xp7qj"]
[ext_resource type="Texture2D" uid="uid://csnggu2ehoh72" path="res://assets/particles/snow_particle.png" id="25_3v7fu"]
[ext_resource type="Texture2D" uid="uid://dl5ppyvdfd30x" path="res://assets/particles/big_snow_particle.png" id="26_bljva"]
[ext_resource type="Texture2D" uid="uid://4a6tvcfbfumk" path="res://assets/button/eyes_button/open_eye/open_eye_button.png" id="26_f7j0k"]
[ext_resource type="Texture2D" uid="uid://d30hroky1scqp" path="res://assets/background/background.png" id="27_bljva"]
[ext_resource type="Texture2D" uid="uid://bmcljr2xoyo3o" path="res://assets/button/eyes_button/open_eye/open_eye_button_click.png" id="27_q5bha"]
[ext_resource type="Texture2D" uid="uid://ddbfddbc20em5" path="res://assets/button/eyes_button/open_eye/open_eye_button_hover.png" id="28_si2ni"]
[ext_resource type="Texture2D" uid="uid://cv86oqgilefmn" path="res://assets/button/confirm_button/confirm_button.png" id="29_61voh"]
[ext_resource type="Texture2D" uid="uid://cqofxxs78y4fr" path="res://assets/button/confirm_button/confirm_button_click.png" id="30_vcgxy"]
[ext_resource type="Texture2D" uid="uid://cmwb41p7n6uex" path="res://assets/button/confirm_button/confirm_button_hover.png" id="31_wvy0n"]
[ext_resource type="Texture2D" uid="uid://6jutd8xsqsmp" path="res://assets/button/exit_button/exit_button.png" id="32_nrmyt"]
[ext_resource type="Texture2D" uid="uid://cmx74ox4lapx2" path="res://assets/button/exit_button/exit_button_click.png" id="33_4uvaq"]
[ext_resource type="Texture2D" uid="uid://bwy2pfjstwykm" path="res://assets/button/exit_button/exit_button_hover.png" id="34_rf6ic"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("2_ugs5p")

[node name="LoadScreen" type="TextureRect" parent="."]
visible = false
z_index = 4096
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("3_vcgxy")

[node name="BorderContainer" type="Control" parent="."]
z_index = -4000
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopBorder" type="TextureRect" parent="BorderContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("27_bljva")

[node name="Inventaire" type="Control" parent="BorderContainer"]
layout_mode = 1
anchor_left = 0.067
anchor_top = 0.52400005
anchor_right = 0.067
anchor_bottom = 0.52400005
offset_left = -84.64
offset_top = -343.92004
offset_right = 52.36
offset_bottom = 411.07996
grow_vertical = 2
script = ExtResource("13_ew7f8")

[node name="ScrollInventaire" type="ScrollContainer" parent="BorderContainer/Inventaire"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -23.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginInventaire" type="MarginContainer" parent="BorderContainer/Inventaire/ScrollInventaire"]
layout_mode = 2

[node name="GridInventaire" type="GridContainer" parent="BorderContainer/Inventaire/ScrollInventaire/MarginInventaire"]
layout_mode = 2
size_flags_vertical = 4

[node name="PasserTour" type="TextureButton" parent="BorderContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.91400003
anchor_top = 0.84200007
anchor_right = 0.91400003
anchor_bottom = 0.84200007
offset_left = -59.880127
offset_top = -60.360046
offset_right = 60.119873
offset_bottom = 59.639954
texture_normal = ExtResource("10_o4crf")
texture_pressed = ExtResource("11_n3rgs")
texture_hover = ExtResource("12_s65m4")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="RichTextLabel" parent="BorderContainer/PasserTour"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.586
anchor_right = 0.5
anchor_bottom = 0.586
offset_left = -155.0
offset_top = 45.399986
offset_right = 158.0
offset_bottom = 108.39997
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.71600944, 0.6322402, 0.12397011, 1)
bbcode_enabled = true
text = "[center][font_size=24]Passer le tour"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoPanel" type="PanelContainer" parent="BorderContainer"]
layout_mode = 0
offset_left = 1547.0
offset_top = 342.0
offset_right = 1655.0
offset_bottom = 441.0
script = ExtResource("14_xnmgy")

[node name="stats_button" type="TextureButton" parent="BorderContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.9335209
anchor_top = 0.2288889
anchor_right = 0.9335209
anchor_bottom = 0.2288889
offset_left = -50.360107
offset_top = -50.200012
offset_right = 49.639893
offset_bottom = 49.799988
texture_normal = ExtResource("13_xp7qj")
texture_pressed = ExtResource("14_o4crf")
texture_hover = ExtResource("15_o4crf")
ignore_texture_size = true
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="ChartStats" parent="BorderContainer" instance=ExtResource("14_o7jfm")]
visible = false

[node name="shop_button" type="TextureButton" parent="BorderContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.16700001
anchor_top = 0.87900007
anchor_right = 0.16700001
anchor_bottom = 0.87900007
offset_left = -53.640015
offset_top = -50.32007
offset_right = 46.359985
offset_bottom = 49.67993
grow_vertical = 0
texture_normal = ExtResource("18_nlktb")
texture_pressed = ExtResource("19_vpgw3")
texture_hover = ExtResource("20_xp7qj")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("11_jtq4o")

[node name="background" type="Panel" parent="BorderContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.15
offset_left = 15.0
offset_top = 16.0
offset_right = -15.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="saison" type="RichTextLabel" parent="BorderContainer/background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.112
anchor_top = 0.512
anchor_right = 0.112
anchor_bottom = 0.512
offset_left = -137.68001
offset_top = -60.192
offset_right = 123.31999
offset_bottom = 41.407997
theme_override_fonts/normal_font = ExtResource("3_o5r0d")
bbcode_enabled = true
text = "[center][font_size=24
]Printemps austral"

[node name="mois" type="RichTextLabel" parent="BorderContainer/background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.112
anchor_top = 0.514
anchor_right = 0.112
anchor_bottom = 0.514
offset_left = -142.68001
offset_top = -18.473999
offset_right = 119.31999
offset_bottom = 51.126007
theme_override_fonts/normal_font = ExtResource("3_o5r0d")
bbcode_enabled = true
text = "[center][font_size=24]Mois 0"

[node name="argent" type="RichTextLabel" parent="BorderContainer/background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.97
anchor_top = 0.2
anchor_right = 0.97
anchor_bottom = 0.2
offset_left = -338.40002
offset_top = 13.600002
offset_right = -54.400024
offset_bottom = 66.600006
grow_horizontal = 0
theme_override_fonts/normal_font = ExtResource("3_o5r0d")
bbcode_enabled = true
text = "[right][font_size=32]1 000 000 €"
scroll_active = false

[node name="temperature" type="RichTextLabel" parent="BorderContainer/background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.112
anchor_top = 0.509
anchor_right = 0.112
anchor_bottom = 0.509
offset_left = -94.68001
offset_top = 27.231003
offset_right = 76.61998
offset_bottom = 86.83101
theme_override_fonts/normal_font = ExtResource("3_o5r0d")
bbcode_enabled = true
text = "[center][font_size=24]24 C°"

[node name="state_bar" type="HBoxContainer" parent="BorderContainer/background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -667.5
offset_top = -70.5
offset_right = 667.5
offset_bottom = 62.5
grow_horizontal = 2
alignment = 1

[node name="HealthBarEmpty" type="Sprite2D" parent="BorderContainer/background/state_bar"]
position = Vector2(321.1875, 81.625)
scale = Vector2(2.875, 2.875)
texture = ExtResource("6_nmx3l")
region_enabled = true
region_rect = Rect2(8.589, 45.353, 109.282, 54.51)

[node name="FilledBarHealth" type="Sprite2D" parent="BorderContainer/background/state_bar/HealthBarEmpty"]
position = Vector2(-29.231003, -27.259998)
texture = ExtResource("7_s7bk8")
centered = false
region_enabled = true
region_rect = Rect2(33.999, 45.353, 83.872, 54.51)
script = ExtResource("8_fj0si")

[node name="Health_text" type="RichTextLabel" parent="BorderContainer/background/state_bar/HealthBarEmpty"]
anchors_preset = -1
anchor_left = 0.6
anchor_top = 1.0
anchor_right = 0.6
anchor_bottom = 1.0
offset_left = -95.9728
offset_top = -48.7826
offset_right = -13.027275
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("3_o5r0d")
bbcode_enabled = true
text = "[center][font_size=8]Santé"
metadata/_edit_use_anchors_ = true

[node name="EfficiencyBarEmpty" type="Sprite2D" parent="BorderContainer/background/state_bar"]
position = Vector2(661.1875, 81.625)
scale = Vector2(2.875, 2.875)
texture = ExtResource("9_1cvsb")
region_enabled = true
region_rect = Rect2(8.589, 45.353, 109.282, 54.51)

[node name="FilledBarEfficiency" type="Sprite2D" parent="BorderContainer/background/state_bar/EfficiencyBarEmpty"]
position = Vector2(-29.231, -27.26)
texture = ExtResource("7_s7bk8")
centered = false
region_enabled = true
region_rect = Rect2(33.9985, 45.353, 83.8725, 54.51)
script = ExtResource("8_fj0si")

[node name="Efficiency_text" type="RichTextLabel" parent="BorderContainer/background/state_bar/EfficiencyBarEmpty"]
anchors_preset = -1
anchor_left = 0.6
anchor_top = 1.0
anchor_right = 0.6
anchor_bottom = 1.0
offset_left = -95.9728
offset_top = -48.7826
offset_right = -13.0272
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("3_o5r0d")
bbcode_enabled = true
text = "[center][font_size=8]Efficacité"
metadata/_edit_use_anchors_ = true

[node name="HappinessBarEmpty" type="Sprite2D" parent="BorderContainer/background/state_bar"]
position = Vector2(1001.1875, 81.625)
scale = Vector2(2.875, 2.875)
texture = ExtResource("10_0ig0g")
region_enabled = true
region_rect = Rect2(8.589, 45.353, 109.282, 54.51)

[node name="FilledBarHappiness" type="Sprite2D" parent="BorderContainer/background/state_bar/HappinessBarEmpty"]
position = Vector2(-29.231, -27.26)
texture = ExtResource("7_s7bk8")
centered = false
region_enabled = true
region_rect = Rect2(33.9985, 45.353, 83.8725, 54.51)
script = ExtResource("8_fj0si")

[node name="Happiness_text" type="RichTextLabel" parent="BorderContainer/background/state_bar/HappinessBarEmpty"]
anchors_preset = -1
anchor_left = 0.6
anchor_top = 1.0
anchor_right = 0.6
anchor_bottom = 1.0
offset_left = -95.9728
offset_top = -48.7826
offset_right = -13.0272
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("3_o5r0d")
bbcode_enabled = true
text = "[center][font_size=8]Bonheur"
metadata/_edit_use_anchors_ = true

[node name="settings_button" type="TextureButton" parent="BorderContainer/background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.99600005
anchor_top = 0.053716835
anchor_right = 0.99600005
anchor_bottom = 0.053716835
offset_left = -50.471313
offset_right = -0.47131348
offset_bottom = 50.0
texture_normal = ExtResource("15_2wmmq")
texture_pressed = ExtResource("15_6wuao")
texture_hover = ExtResource("16_6wuao")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("11_jtq4o")
metadata/_edit_use_anchors_ = true

[node name="NightMode" type="Panel" parent="BorderContainer"]
visible = false
modulate = Color(0, 0.6415867, 0.7852611, 1)
z_index = -900
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Close_Inventory" type="TextureButton" parent="BorderContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.11400001
anchor_top = 0.19100001
anchor_right = 0.11400001
anchor_bottom = 0.19100001
offset_left = -20.88002
offset_top = -20.280014
offset_right = 20.11998
offset_bottom = 20.719986
grow_vertical = 0
texture_normal = ExtResource("26_f7j0k")
texture_pressed = ExtResource("27_q5bha")
texture_hover = ExtResource("28_si2ni")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("11_jtq4o")

[node name="passerTour" type="Panel" parent="BorderContainer"]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -666.5
offset_top = -162.0
offset_right = 666.5
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2

[node name="message" type="RichTextLabel" parent="BorderContainer/passerTour"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.238
anchor_right = 0.5
anchor_bottom = 0.238
offset_left = -666.5
offset_top = -77.112
offset_right = 657.5
offset_bottom = 16.888
theme_override_fonts/normal_font = ExtResource("3_o5r0d")
bbcode_enabled = true
text = "[center][font_size=56]Voulez vous vraiment passer au tour suivant ?"
fit_content = true
scroll_active = false

[node name="confirm_button" type="TextureButton" parent="BorderContainer/passerTour"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.26900002
anchor_top = 0.72800004
anchor_right = 0.26900002
anchor_bottom = 0.72800004
offset_left = -59.577026
offset_top = -58.87201
offset_right = 58.422974
offset_bottom = 59.12799
texture_normal = ExtResource("29_61voh")
texture_pressed = ExtResource("30_vcgxy")
texture_hover = ExtResource("31_wvy0n")
stretch_mode = 0

[node name="cancel_button" type="TextureButton" parent="BorderContainer/passerTour"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.65900004
anchor_top = 0.721
anchor_right = 0.65900004
anchor_bottom = 0.721
offset_left = -60.447083
offset_top = -60.604004
offset_right = 60.552917
offset_bottom = 60.395996
texture_normal = ExtResource("32_nrmyt")
texture_pressed = ExtResource("33_4uvaq")
texture_hover = ExtResource("34_rf6ic")
stretch_mode = 0

[node name="PanelChangementTour" type="Panel" parent="BorderContainer"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.74997
offset_top = -58.25
offset_right = 246.74997
offset_bottom = 58.25
grow_horizontal = 2
grow_vertical = 2

[node name="ChangementTour" type="RichTextLabel" parent="BorderContainer/PanelChangementTour"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.509
offset_left = -236.99997
offset_top = -41.0
offset_right = 243.24261
offset_bottom = 41.9515
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_o5r0d")
bbcode_enabled = true
text = "[center][font_size=48]Tour 1"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="PanelNuitJour" type="Panel" parent="BorderContainer"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.59000003
anchor_right = 0.5
anchor_bottom = 0.59000003
offset_left = -246.75
offset_top = -22.450012
offset_right = 246.75
offset_bottom = 21.799988
grow_horizontal = 2
grow_vertical = 2

[node name="NuitJour" type="RichTextLabel" parent="BorderContainer/PanelNuitJour"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.614774
anchor_right = 0.5
anchor_bottom = 0.61477405
offset_left = -236.99997
offset_top = -23.07875
offset_right = 243.24261
offset_bottom = 23.04625
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_o5r0d")
bbcode_enabled = true
text = "[center][font_size=24]La nuit tombe"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="SnowParticle" type="CPUParticles2D" parent="."]
z_index = -4096
position = Vector2(-250, -2321)
amount = 500
texture = ExtResource("25_3v7fu")
lifetime = 5.0
preprocess = 5.0
speed_scale = 0.5
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(400, 980)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
tangential_accel_min = -900.0
tangential_accel_max = 900.0
scale_amount_min = 1.2
scale_amount_max = 1.6

[node name="SnowParticle2" type="CPUParticles2D" parent="."]
z_index = -4096
position = Vector2(-250, -2321)
amount = 500
texture = ExtResource("26_bljva")
lifetime = 5.0
preprocess = 5.0
speed_scale = 0.5
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(400, 980)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
tangential_accel_min = -900.0
tangential_accel_max = 900.0
scale_amount_min = 1.2
scale_amount_max = 1.6

[connection signal="pressed" from="BorderContainer/PasserTour" to="." method="change_visible_confirmation_passer_tour"]
[connection signal="pressed" from="BorderContainer/stats_button" to="." method="_on_btn_graphique_stats_pressed"]
[connection signal="pressed" from="BorderContainer/shop_button" to="BorderContainer/shop_button" method="_on_pressed_shop"]
[connection signal="pressed" from="BorderContainer/background/settings_button" to="BorderContainer/background/settings_button" method="_on_pressed_pause"]
[connection signal="pressed" from="BorderContainer/Close_Inventory" to="." method="_on_fermer_pressed_close_inventory"]
[connection signal="pressed" from="BorderContainer/passerTour/confirm_button" to="." method="_on_passer_tour_pressed"]
[connection signal="pressed" from="BorderContainer/passerTour/cancel_button" to="." method="change_visible_confirmation_passer_tour"]
